syntax = "proto3";
package saonetwork.sao.sao;

option go_package = "github.com/SaoNetwork/sao/x/sao/types";

message JwsSignature {
  
  string protected = 1; 
  string signature = 2; 
}
